cfn_benchmark/cfn_templates/iksena__llm-iac-data-analysis/cfn_benchmark__cfn_templates__Tianyi2__IRIS__data__cloudformation_collected_templates_new__template_03635_kloudpepper-SG.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: "CloudFormation template to create Security Groups"

Parameters:
  EnvironmentName:
    Type: String

  VpcID:
    Type: String

  VpcCIDR:
    Type: String

Resources:
  ALBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: ALB security group
      GroupName: !Sub ${EnvironmentName}-ALB-SG
      SecurityGroupIngress:
      - CidrIp: 0.0.0.0/0
        FromPort: 443
        IpProtocol: tcp
        ToPort: 443
        Description: !Sub ${EnvironmentName}-ALB-SG
      VpcId: !Ref VpcID
      Tags:
        -
          Key: Name
          Value: !Sub ${EnvironmentName}-ALB-SG

  ECSSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: ECS security group
      GroupName: !Sub ${EnvironmentName}-ECS-SG
      SecurityGroupIngress:
      - SourceSecurityGroupId: !GetAtt ALBSecurityGroup.GroupId
        FromPort: 80
        IpProtocol: tcp
        ToPort: 80
      VpcId: !Ref VpcID
      Tags:
        -
          Key: Name
          Value: !Sub ${EnvironmentName}-ECS-SG

  DBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: RDS security group
      GroupName: !Sub ${EnvironmentName}-DB-SG
      SecurityGroupIngress:
      - SourceSecurityGroupId: !GetAtt ECSSecurityGroup.GroupId
        FromPort: 33066
        IpProtocol: tcp
        ToPort: 33066
      VpcId: !Ref VpcID
      Tags:
        -
          Key: Name
          Value: !Sub ${EnvironmentName}-DB-SG

  EFSSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: EFS security group
      GroupName: !Sub ${EnvironmentName}-EFS-SG
      SecurityGroupIngress:
      - SourceSecurityGroupId: !GetAtt ECSSecurityGroup.GroupId
        FromPort: 2049
        IpProtocol: tcp
        ToPort: 2049
      VpcId: !Ref VpcID
      Tags:
        -
          Key: Name
          Value: !Sub ${EnvironmentName}-EFS-SG

  VPCEnpointSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: VPC Endpoints security group
      GroupName: !Sub ${EnvironmentName}-VPCEndpoint-SG
      SecurityGroupIngress:
      - CidrIp: !Ref VpcCIDR
        FromPort: 443
        IpProtocol: tcp
        ToPort: 443
      VpcId: !Ref VpcID
      Tags:
        -
          Key: Name
          Value: !Sub ${EnvironmentName}-VPCEndpoint-SG

Outputs:
  ALBSecurityGroup:
    Description: ALB security group
    Value: !GetAtt ALBSecurityGroup.GroupId

  ECSSecurityGroup:
    Description: ECS security group
    Value: !GetAtt ECSSecurityGroup.GroupId

  DBSecurityGroup:
    Description: RDS security group
    Value: !GetAtt DBSecurityGroup.GroupId

  EFSSecurityGroup:
    Description: EFS security group
    Value: !GetAtt EFSSecurityGroup.GroupId

  VPCEnpointSecurityGroup:
    Description: VPC Endpoints security group
    Value: !GetAtt VPCEnpointSecurityGroup.GroupId
